--- a/pom.xml
+++ b/pom.xml
@@ -223,25 +223,25 @@
 
       <!-- Spring Boot Actuator displays build-related information if a git.properties
         file is present at the classpath -->
-      <plugin>
-        <groupId>pl.project13.maven</groupId>
-        <artifactId>git-commit-id-plugin</artifactId>
-        <executions>
-          <execution>
-            <goals>
-              <goal>revision</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <verbose>true</verbose>
-          <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>
-          <generateGitPropertiesFile>true</generateGitPropertiesFile>
-          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties
-          </generateGitPropertiesFilename>
-          <failOnNoGitDirectory>false</failOnNoGitDirectory>
-        </configuration>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>pl.project13.maven</groupId>-->
+<!--        <artifactId>git-commit-id-plugin</artifactId>-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--              <goal>revision</goal>-->
+<!--            </goals>-->
+<!--          </execution>-->
+<!--        </executions>-->
+<!--        <configuration>-->
+<!--          <verbose>true</verbose>-->
+<!--          <dateFormat>yyyy-MM-dd'T'HH:mm:ssZ</dateFormat>-->
+<!--          <generateGitPropertiesFile>true</generateGitPropertiesFile>-->
+<!--          <generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties-->
+<!--          </generateGitPropertiesFilename>-->
+<!--          <failOnNoGitDirectory>false</failOnNoGitDirectory>-->
+<!--        </configuration>-->
+<!--      </plugin>-->
 
       <plugin>
         <groupId>ro.isdc.wro4j</groupId>
@@ -275,6 +275,13 @@
           </dependency>
         </dependencies>
       </plugin>
+        <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-dependency-plugin</artifactId> <version>2.4</version>
+            <executions>
+                <execution>
+                    <id>copy-dependencies</id> <phase>package</phase> <goals><goal>copy-dependencies</goal></goals>
+                </execution>
+            </executions>
+        </plugin>
     </plugins>
   </build>
 
